# routx-python

./: .gitignore  README.md  meson.build  pyproject.toml  requriements.dev.txt
.github/workflows/: check.yml
routex/: __init__.py  c.py  py.py  test.py  wrapper.py
routx/: __init__.py  wrapper.py
subprojects/: routex.wrap  routx.wrap
